Views Calendar 5.x
==================

Version 2.0 dev
===============
- #247215 Make sure default calendar view and block are not triggered if there is no date field and add validation to the view to require a date field.
- #268668 Adjust comparison dates for timezone offsets to make sure multi-day events get split correctly.
- The cached ical feed cannot be used to store date objects, recreate them as needed.
- #234070 Fix broken ical title.
- #258501 Make sure calendar.inc is included when creating ical feed.
- #258515 Fix url in ical export.
- #266623 Protect against foreach() errors on empty ical feeds.
- PHP4 can't do comparisons of date objects, so alter calendar comparison code to compare formatted dates instead.
- #275213 Arguments were reversed in date_week_range().
- Remove as many dependencies as possible from install files and auto-enable necessary modules.
- #272263 Make sure empty ical stream doesn't get into cache.
- Cleanup calendar_info() values - we don't use granularity and only need one array for from/to.
- #261610 Prepare for a jQuery popup in the calendar by adding a unique id to the 'node' and altering the date theme to surpress all other dates if $node->date_id is set.
- #243172 Theme('calendar_empty') should be theme('calendar_empty_day'), patch by JohnAlbin.
- Clean up install file included files and include file paths, and auto-enable date_timezone and date_php4.
- Switch calendar_date_week() to date_week() and calendar_week_range() to date_week_range().
- Make sure mini calendar works correctly for non-calendar views, like lists.
- #154479 Add jQuery ajax update for navigating mini block calendar.
- #223601 Re-implement the 'mini' url for calendar block so it will work in Panels and ajax.
- #243220 Add items to the calendar date box theme.
- #243725 Add title/description/url to calendar setup form.
- #243254 Make sure args aren't overriden if already set.
- #239501 Add missing argument for teaser display.